--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "1.0.0",
   "description": "Graph playground",
   "scripts": {
-    "dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js",
-    "compile": "tsc --watch",
-    "watch": "nodemon --watch build build/index.js",
+    "dev": "tsc --watch",
     "test": "ts-node"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/simonespa/graph-playground.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["graph", "graph theory", "algorithms", "data structures", "complexity"],
+  "author": {
+    "name": "Simone Spaccarotella",
+    "email": "spa.simone@gmail.com",
+    "url": "https://www.linkedin.com/in/simonespaccarotella"
+  },
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/simonespa/graph-playground/issues"
   },
   "homepage": "https://github.com/simonespa/graph-playground#readme",
   "devDependencies": {
     "@types/node": "^14.14.22",
-    "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
