--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "dev": "tsc --watch",
-    "test": "ts-node"
+    "test:run": "ts-node",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/simonespa/graph-playground.git"
   },
-  "keywords": ["graph", "graph theory", "algorithms", "data structures", "complexity"],
+  "keywords": [
+    "graph",
+    "graph theory",
+    "algorithms",
+    "data structures",
+    "complexity"
+  ],
   "author": {
     "name": "Simone Spaccarotella",
     "email": "spa.simone@gmail.com",
@@ -23,7 +31,12 @@
   },
   "homepage": "https://github.com/simonespa/graph-playground#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
