--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "data-structures-and-algorithms",
+  "name": "algorithms-and-data-structures",
   "version": "1.0.0",
-  "description": "A collection of data structures and algorithms documentation and a playground to use for your own learning.",
+  "description": "An open source collection and playground of algorithms, data structures and related documentation to brush up your knowledge of computer science fundamentals, or learn it from scratch.",
   "scripts": {
     "dev": "tsc --watch",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/simonespa/data-structures-and-algorithms.git"
+    "url": "git+https://github.com/simonespa/algorithms-and-data-structures.git"
   },
   "keywords": [
     "algorithms",
@@ -31,14 +31,14 @@
   },
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/simonespa/data-structures-and-algorithms/issues"
+    "url": "https://github.com/simonespa/algorithms-and-data-structures/issues"
   },
-  "homepage": "https://github.com/simonespa/data-structures-and-algorithms#readme",
+  "homepage": "https://github.com/simonespa/algorithms-and-data-structures#readme",
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.22",
-    "chai": "^4.2.0",
+    "@types/node": "^14.14.25",
+    "chai": "^4.3.0",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
