--- a/package.json
+++ b/package.json
@@ -35,12 +35,9 @@
   },
   "homepage": "https://github.com/simonespa/algorithms-and-data-structures#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.19",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^16.0.0",
-    "chai": "^4.3.4",
-    "mocha": "^9.0.2",
-    "nyc": "^15.1.0",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.0",
+    "jest": "^27.0.6",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   }
