--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "An open source collection and playground of algorithms, data structures and related documentation to brush up your knowledge of computer science fundamentals, or learn it from scratch.",
   "scripts": {
     "dev": "tsc --watch",
-    "test": "mocha -r ts-node/register test/**/*.test.ts",
-    "test:coverage": "nyc npm run test && open coverage/index.html",
-    "ts-node": "ts-node"
+    "test": "jest",
+    "start": "ts-node"
   },
   "repository": {
     "type": "git",
@@ -38,6 +37,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.0",
     "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   }
